Refactoring codice, integrazione con React

--- a/api-steelco/Properties/launchSettings.json
+++ b/api-steelco/Properties/launchSettings.json
@@ -1,18 +1,20 @@
 ﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56121",
-      "sslPort": 44370
+      "applicationUrl": "http://localhost:51186",
+      "sslPort": 44324
     }
   },
   "profiles": {
-    "Progetto_Questionario_Steelco": {
+    "api_steelco": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7249;http://localhost:5128",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7018;http://localhost:5062",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,6 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
