--- a/api-steelco/api-steelco.csproj
+++ b/api-steelco/api-steelco.csproj
@@ -8,12 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <Compile Remove="Controllers\Database JSON\**" />
+    <Content Remove="Controllers\Database JSON\**" />
+    <EmbeddedResource Remove="Controllers\Database JSON\**" />
+    <None Remove="Controllers\Database JSON\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
