--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,4 +25,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
+      env:
+        PASSWORD_DB: ${{ secrets.PASSWORD_DB }}
+        USER_DB: ${{ secrets.USER_DB}}
       run: dotnet test --no-build --verbosity normal
