Aggiunto database sql

--- a/api-steelco/appsettings.json
+++ b/api-steelco/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "host=plesk.barsanti.edu.it;user=gruppo1.4ci;pwd=mFeBD6YTdRiqUwU;database=gruppo1_4ci_"
+  }
 }
