Aggiunta Auth con chiave

--- a/api-steelco/appsettings.json
+++ b/api-steelco/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "Authentication": {
+    "ApiKey": "c367032fecaf4d23a33046f8f8697248"
+  },
   "ConnectionStrings": {
     "Default": "host=plesk.barsanti.edu.it;user=gruppo1.4ci;pwd=mFeBD6YTdRiqUwU;database=gruppo1_4ci_"
   }
