--- a/api-steelco/appsettings.json
+++ b/api-steelco/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "host=plesk.barsanti.edu.it;user=gruppo1.4ci;pwd=mFeBD6YTdRiqUwU;database=gruppo1_4ci_"
+    "Default": "host=plesk.barsanti.edu.it;user=gruppo1_4ci;pwd=mFeBD6YTdRiqUwU;database=gruppo1_4ci_"
   }
 }
